--- a/.config/i3/config
+++ b/.config/i3/config
@@ -13,7 +13,7 @@ set $mod Mod4
 
 # Font for window titles. Will also be used by the bar unless a different font
 # is used in the bar {} block below.
-font pango:Source Sans Pro 10
+font pango:monospace 10, FontAwesome 11
 
 # This font is widely installed, provides lots of unicode glyphs, right-to-left
 # text rendering and scalability on retina/hidpi displays (thanks to pango).
@@ -93,28 +93,28 @@ bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
 # switch to workspace
-bindsym $mod+1 workspace "1: Home"
+bindsym $mod+1 workspace "1:  Home"
 bindsym $mod+2 workspace "2:  Coding"
-bindsym $mod+3 workspace "3: Dev Browser"
+bindsym $mod+3 workspace "3:  Dev Browser"
 bindsym $mod+4 workspace "4:  Terminal"
-bindsym $mod+5 workspace "5: Spotify"
+bindsym $mod+5 workspace "5:  Labs"
 bindsym $mod+6 workspace 6
 bindsym $mod+7 workspace 7
 bindsym $mod+8 workspace 8
 bindsym $mod+9 workspace 9
-bindsym $mod+0 workspace 10
+bindsym $mod+0 workspace "10:  Spotify"
 
 # move focused container to workspace
-bindsym $mod+Shift+1 move container to workspace 1
-bindsym $mod+Shift+2 move container to workspace 2
-bindsym $mod+Shift+3 move container to workspace 3
-bindsym $mod+Shift+4 move container to workspace 4
-bindsym $mod+Shift+5 move container to workspace 5
+bindsym $mod+Shift+1 move container to workspace "1:  Home"
+bindsym $mod+Shift+2 move container to workspace "2:  Coding"
+bindsym $mod+Shift+3 move container to workspace "3:  Dev Browser"
+bindsym $mod+Shift+4 move container to workspace "4:  Terminal"
+bindsym $mod+Shift+5 move container to workspace "5:  Labs"
 bindsym $mod+Shift+6 move container to workspace 6
 bindsym $mod+Shift+7 move container to workspace 7
 bindsym $mod+Shift+8 move container to workspace 8
 bindsym $mod+Shift+9 move container to workspace 9
-bindsym $mod+Shift+0 move container to workspace 10
+bindsym $mod+Shift+0 move container to workspace "10:  Spotify"
 
 # reload the configuration file
 bindsym $mod+Shift+c reload
@@ -163,16 +163,16 @@ bar {
                 active_workspace   #333333 #5f676a #ffffff
                 inactive_workspace #263137 #263137 #ffffff
                 urgent_workspace   #2f343a #900000 #ffffff
-                binding_mode       #2f343a #900000 #ffffff
+                binding_mode       #E7972F #E7972F #ffffff
         }
 }
 
 bindsym $mod+b exec "i3lock -i ~/Downloads/wallpaper_mikael_gustafsson.png"
 
 # class                 border  backgr. text    indicator child_border                                                                     
-client.focused_inactive #0d1010 #212121 #d9d9d9 #0d1010 #063340                                                                            
-client.unfocused        #4b3d2f #212121 #d9d9d9 #424242 #4b3d2f                                                                            
-client.focused          #e9cf7a #cecece #000000 #e9cf7a #e9cf7a     
+client.focused_inactive #1b3764 #212121 #d9d9d9 #0d1010 #1b3764                                                                            
+client.unfocused        #1b3764 #212121 #d9d9d9 #424242 #1b3764                                                                            
+client.focused          #268BD2 #cecece #000000 #e9cf7a #268BD2     
 
 gaps inner 12
 gaps outer 6
@@ -184,9 +184,19 @@ exec_always --no-startup-id feh --no-fehbg --bg-scale ~/Downloads/blur-wallpaper
 
 exec --no-startup-id "i3-msg 'workspace 2:  Coding; append_layout /home/ziggy/.i3/workspace-2.json'"
 
-assign [class="Code"] number "2:  Coding"
-
 exec --no-startup-id code
 
-exec --no-startup-id volumeicon
+# Wifi
 exec --no-startup-id nm-applet
+
+# Clone to projector
+bindsym $mod+o exec xrandr --output HDMI-1 --same-as DP-1
+
+# Sreen brightness controls
+bindsym XF86MonBrightnessUp exec light -A 5 # increase screen brightness
+bindsym XF86MonBrightnessDown exec light -U 5 # decrease screen brightness
+
+# change volume or toggle mute
+bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 5%+ && pkill -RTMIN+1 i3blocks 
+bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 5%- && pkill -RTMIN+1 i3blocks
+bindsym XF86AudioMute exec amixer -q -D pulse sset Master toggle && pkill -RTMIN+1 i3blocks
