--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -9,12 +9,12 @@
     "explorer.confirmDragAndDrop": false,
     "emmet.includeLanguages": {
         "ejs": "html",
-        "erb": "html"
+        "erb": "html",
+        "javascript": "javascriptreact"
     },
     "[ruby]": {
         "editor.tabSize": 2
     },
-    "workbench.colorTheme": "Material Theme",
     "editor.minimap.enabled": false,
     "workbench.activityBar.visible": false,
     "terminal.integrated.drawBoldTextInBrightColors": false,
@@ -24,5 +24,31 @@
     "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback','FontAwesome'",
     "window.menuBarVisibility": "toggle",
     "editor.formatOnSave": true,
-    "editor.formatOnPaste": true
+    "editor.formatOnPaste": true,
+    "html.format.endWithNewline": true,
+    "materialTheme.accent": "Bright Teal",
+    "workbench.colorCustomizations": {
+        "activityBarBadge.background": "#64FFDA",
+        "list.activeSelectionForeground": "#64FFDA",
+        "list.inactiveSelectionForeground": "#64FFDA",
+        "list.highlightForeground": "#64FFDA",
+        "scrollbarSlider.activeBackground": "#64FFDA50",
+        "editorSuggestWidget.highlightForeground": "#64FFDA",
+        "textLink.foreground": "#64FFDA",
+        "progressBar.background": "#64FFDA",
+        "pickerGroup.foreground": "#64FFDA",
+        "tab.activeBorder": "#64FFDA",
+        "notificationLink.foreground": "#64FFDA",
+        "editorWidget.resizeBorder": "#64FFDA",
+        "editorWidget.border": "#64FFDA",
+        "settings.modifiedItemIndicator": "#64FFDA",
+        "settings.headerForeground": "#64FFDA",
+        "panelTitle.activeBorder": "#64FFDA",
+        "breadcrumb.activeSelectionForeground": "#64FFDA",
+        "menu.selectionForeground": "#64FFDA",
+        "menubar.selectionForeground": "#64FFDA"
+    },
+    "workbench.colorTheme": "Material Theme",
+    "editor.selectionClipboard": false,
+    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true
 }
