--- a/.config/i3/config
+++ b/.config/i3/config
@@ -78,7 +78,7 @@ bindsym $mod+a focus parent
 # switch to workspace
 bindsym $mod+1 workspace "1:  Home"
 bindsym $mod+2 workspace "2:  Coding"
-bindsym $mod+3 workspace "3:  Dev Browser"
+bindsym $mod+3 workspace "3:  Server"
 bindsym $mod+4 workspace "4:  Terminal"
 bindsym $mod+5 workspace "5:  Labs"
 bindsym $mod+6 workspace 6
@@ -90,7 +90,7 @@ bindsym $mod+0 workspace "10:  Spotify"
 # move focused container to workspace
 bindsym $mod+Shift+1 move container to workspace "1:  Home"
 bindsym $mod+Shift+2 move container to workspace "2:  Coding"
-bindsym $mod+Shift+3 move container to workspace "3:  Dev Browser"
+bindsym $mod+Shift+3 move container to workspace "3:  Server"
 bindsym $mod+Shift+4 move container to workspace "4:  Terminal"
 bindsym $mod+Shift+5 move container to workspace "5:  Labs"
 bindsym $mod+Shift+6 move container to workspace 6
