--- a/.config/Code/User/settings.json
+++ b/.config/Code/User/settings.json
@@ -3,8 +3,6 @@
     "editor.hover.sticky": false,
     "files.autoSave": "onFocusChange",
     "editor.wordWrap": "on",
-    "workbench.iconTheme": "eq-material-theme-icons-light",
-    "materialTheme.fixIconsRunning": false,
     "breadcrumbs.enabled": false,
     "explorer.confirmDragAndDrop": false,
     "emmet.includeLanguages": {
@@ -16,40 +14,38 @@
         "editor.tabSize": 2
     },
     "editor.minimap.enabled": true,
-    "workbench.activityBar.visible": false,
+    "workbench.activityBar.visible": true,
     "terminal.integrated.drawBoldTextInBrightColors": false,
     "terminal.integrated.fontFamily": "Meslo LG M DZ for Powerline",
     "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback','Font Awesome'",
     "javascript.updateImportsOnFileMove.enabled": "always",
-    "editor.fontFamily": "'Droid Sans Mono', 'monospace', monospace, 'Droid Sans Fallback','FontAwesome'",
     "window.menuBarVisibility": "toggle",
     "editor.formatOnSave": true,
     "editor.formatOnPaste": true,
     "html.format.endWithNewline": true,
-    "materialTheme.accent": "Bright Teal",
+    "materialTheme.accent": "Orange",
     "workbench.colorCustomizations": {
-        "activityBarBadge.background": "#64FFDA",
-        "list.activeSelectionForeground": "#64FFDA",
-        "list.inactiveSelectionForeground": "#64FFDA",
-        "list.highlightForeground": "#64FFDA",
-        "scrollbarSlider.activeBackground": "#64FFDA50",
-        "editorSuggestWidget.highlightForeground": "#64FFDA",
-        "textLink.foreground": "#64FFDA",
-        "progressBar.background": "#64FFDA",
-        "pickerGroup.foreground": "#64FFDA",
-        "tab.activeBorder": "#64FFDA",
-        "notificationLink.foreground": "#64FFDA",
-        "editorWidget.resizeBorder": "#64FFDA",
-        "editorWidget.border": "#64FFDA",
-        "settings.modifiedItemIndicator": "#64FFDA",
-        "settings.headerForeground": "#64FFDA",
-        "panelTitle.activeBorder": "#64FFDA",
-        "breadcrumb.activeSelectionForeground": "#64FFDA",
-        "menu.selectionForeground": "#64FFDA",
-        "menubar.selectionForeground": "#64FFDA"
+        "activityBarBadge.background": "#FF7042",
+        "list.activeSelectionForeground": "#FF7042",
+        "list.inactiveSelectionForeground": "#FF7042",
+        "list.highlightForeground": "#FF7042",
+        "scrollbarSlider.activeBackground": "#FF704250",
+        "editorSuggestWidget.highlightForeground": "#FF7042",
+        "textLink.foreground": "#FF7042",
+        "progressBar.background": "#FF7042",
+        "pickerGroup.foreground": "#FF7042",
+        "tab.activeBorder": "#FF7042",
+        "notificationLink.foreground": "#FF7042",
+        "editorWidget.resizeBorder": "#FF7042",
+        "editorWidget.border": "#FF7042",
+        "settings.modifiedItemIndicator": "#FF7042",
+        "settings.headerForeground": "#FF7042",
+        "panelTitle.activeBorder": "#FF7042",
+        "breadcrumb.activeSelectionForeground": "#FF7042",
+        "menu.selectionForeground": "#FF7042",
+        "menubar.selectionForeground": "#FF7042"
     },
     "workbench.colorTheme": "Material Theme",
     "editor.selectionClipboard": false,
-    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true,
-    "javascript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true
+    "typescript.format.insertSpaceAfterOpeningAndBeforeClosingTemplateStringBraces": true
 }
