--- a/.config/i3/config
+++ b/.config/i3/config
@@ -16,7 +16,7 @@ font pango:Inconsolata 11, FontAwesome 11
 floating_modifier $mod
 
 # start a terminal
-bindsym $mod+Return exec i3-sensible-terminal
+bindsym $mod+Return exec hyper
 
 # kill focused window
 bindsym $mod+Shift+q kill
