Add hypr and basic install script

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,6 +1,7 @@
 {
     "layer": "top",
     "position": "bottom",
+    "reload_style_on_change": true,
     "modules-left": ["hyprland/workspaces"],
     "modules-center": ["sway/window"],
     "modules-right": ["network", "pulseaudio", "battery", "clock", "tray", "custom/lock", "custom/power"],
