Fix stow messups

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,6 +1,6 @@
 source=./macchiato.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres,auto,auto
+monitor=,highres,auto,1
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 
