--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -21,11 +21,11 @@
         "max-length": 50
     },
     "network": {
-        "format-wifi": "{essid} ({signalStrength}%) ",
+        "format-wifi": "{ipaddr} ({signalStrength}%) ",
         "format-ethernet": "{ifname} ",
         "format-disconnected": "", 
         "max-length": 50,
-        "on-click": "nm-applet"
+        "on-click": "nm-applet --indicator"
     },
     "clock": {
         "timezone": "America/Vancouver",
