--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -10,9 +10,6 @@ exec-once=hyprpaper
 exec-once=nm-applet --indicator
 exec-once=blueman-applet
 
-# Source a file (multi-file configs)
-# source = ~/.config/hypr/myColors.conf
-
 # Set programs that you use
 $terminal = kitty
 $fileManager = dolphin
@@ -29,42 +26,33 @@ input {
     kb_model =
     kb_options = caps:swapescape
     kb_rules =
-
     follow_mouse = 1
-
     touchpad {
         natural_scroll = no
     }
-
     sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
 }
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     gaps_in = 5
     gaps_out = 10
     border_size = 2
     col.active_border = $teal
     col.inactive_border = $surface1
-
     layout = dwindle
-
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
 }
 
 decoration {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-
     rounding = 2
-    
     blur {
         enabled = false
         size = 3
         passes = 1
     }
-
     drop_shadow = false
     shadow_range = 4
     shadow_render_power = 3
@@ -73,11 +61,8 @@ decoration {
 
 animations {
     enabled = yes
-
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
-
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
-
     animation = windows, 1, 7, myBezier
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
@@ -134,6 +119,8 @@ bind = $mainMod, V, togglefloating,
 bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, pseudo, # dwindle
 bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, F, fullscreen,1
+bind = $mainMod SHIFT, F, fullscreen,
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
