Add btop, tmux conf

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -1,8 +1,7 @@
 source=./macchiato.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=,highres,auto,1
-
-# See https://wiki.hyprland.org/Configuring/Keywords/ for more
+monitor=DP-1,highres,1920x0,1
+monitor=DP-2,highres,0x0,1
 
 # Execute your favorite apps at launch
 exec-once=waybar
@@ -24,13 +23,13 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = caps:swapescape
+    kb_options =
     kb_rules =
     follow_mouse = 1
     touchpad {
         natural_scroll = no
     }
-    sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
+    sensitivity = -0.8 # -1.0 to 1.0, 0 means no modification.
 }
 
 general {
@@ -117,8 +116,8 @@ bind = $mainMod, M, exit,
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
 bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, pseudo, # dwindle
-bind = $mainMod, J, togglesplit, # dwindle
+bind = $mainMod, P, exec, grim -g "$(slurp -o)" ~/Screenshots/$(date +'%s_grim.png')
+bind = $mainMod SHIFT, P, exec, grim ~/Screenshots/$(date +'%s_grim.png')
 bind = $mainMod, F, fullscreen,1
 bind = $mainMod SHIFT, F, fullscreen,
 
