--- a/.config/hypr/hyprpaper.conf
+++ b/.config/hypr/hyprpaper.conf
@@ -1,3 +1,3 @@
-preload = ~/Downloads/shaded_landscape.jpeg
-wallpaper = ,~/Downloads/shaded_landscape.jpeg
+preload = ~/Downloads/tropic_island_evening.jpg
+wallpaper = ,~/Downloads/tropic_island_evening.jpg
 splash = false
