--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -12,7 +12,7 @@
         "cpu",
         "memory",
         "network",
-        "audio",
+        "pulseaudio",
         "battery",
         "custom/lock",
         "custom/power"
@@ -22,7 +22,7 @@
         "sort-by-name": true,
         "format": " {icon} ",
         "format-icons": {
-            "1": "",
+            "1": "󰈹",
             "2": "󱃖",
             "default": ""
         }
@@ -32,7 +32,7 @@
     },
     "network": {
         "format-wifi": "{ipaddr} ({signalStrength}%) ",
-        "format-ethernet": "{ifname} ",
+        "format-ethernet": "{ipaddr} ",
         "format-disconnected": "",
         "max-length": 50,
         "on-click": "nm-applet --indicator"
@@ -73,7 +73,7 @@
             ""
         ]
     },
-    "audio": {
+    "pulseaudio": {
         // "scroll-step": 1, // %, can be a float
         "format": "{icon} {volume}%",
         "format-muted": "",
@@ -89,11 +89,11 @@
     "custom/lock": {
         "tooltip": false,
         "on-click": "swaylock -i ~/Downloads/shaded_landscape.jpeg --grace 0",
-        "format": "",
+        "format": ""
     },
     "custom/power": {
         "tooltip": false,
         "on-click": "wlogout &",
-        "format": "襤"
+        "format": "⏻"
     }
 }
