Make small changes

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -11,7 +11,7 @@ exec-once=blueman-applet
 
 # Set programs that you use
 $terminal = kitty
-$fileManager = dolphin
+$fileManager = thunar
 $menu = wofi --show drun
 
 # Some default env vars.
