Modify install script, hyprland/telescope keys

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -8,6 +8,7 @@ exec-once=waybar
 exec-once=hyprpaper
 exec-once=nm-applet --indicator
 exec-once=blueman-applet
+exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 
 # Set programs that you use
 $terminal = kitty
@@ -111,7 +112,7 @@ $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod, C, killactive, 
+bind = $mainMod SHIFT, C, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
@@ -119,6 +120,7 @@ bind = $mainMod, D, exec, $menu
 bind = $mainMod, P, exec, grim -g "$(slurp -o)" ~/Screenshots/$(date +'%s_grim.png')
 bind = $mainMod SHIFT, P, exec, grim ~/Screenshots/$(date +'%s_grim.png')
 bind = $mainMod, F, fullscreen,1
+bind = $mainMod, C, exec, Chatterino-x86_64-Qt6.AppImage
 bind = $mainMod SHIFT, F, fullscreen,
 
 # Move focus with mainMod + arrow keys
