Update waybar, allow screenshare

--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -3,12 +3,15 @@
     "position": "bottom",
     "reload_style_on_change": true,
     "modules-left": [
-        "hyprland/workspaces"
+        "hyprland/workspaces",
+        "wlr/taskbar"
     ],
     "modules-center": [
         "clock"
     ],
     "modules-right": [
+        "privacy",
+        "tray",
         "cpu",
         "memory",
         "network",
@@ -29,6 +32,40 @@
     },
     "sway/window": {
         "max-length": 50
+    },
+    "hyprland/window": {
+        "icon": true,
+        "format": "{}",
+        "separate-outputs": true,
+        "rewrite": {
+            "(.*) - Mozilla Firefox": "Firefox"
+        }
+    },
+    "privacy": {
+        "icon-spacing": 4,
+        "icon-size": 18,
+        "transition-duration": 250,
+        "modules": [
+            {
+                "type": "screenshare",
+                "tooltip": true,
+                "tooltip-icon-size": 24
+            },
+            {
+                "type": "audio-out",
+                "tooltip": true,
+                "tooltip-icon-size": 24
+            },
+            {
+                "type": "audio-in",
+                "tooltip": true,
+                "tooltip-icon-size": 24
+            }
+        ]
+    },
+    "tray": {
+        "icon-size": 21,
+        "spacing": 10
     },
     "network": {
         "format-wifi": "{ipaddr} ({signalStrength}%) ",
