--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -9,6 +9,7 @@ exec-once=hyprpaper
 exec-once=nm-applet --indicator
 exec-once=blueman-applet
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
+exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
 # Set programs that you use
 $terminal = kitty
