--- a/.config/waybar/config.jsonc
+++ b/.config/waybar/config.jsonc
@@ -1,6 +1,6 @@
 {
     "layer": "top",
-    "position": "bottom",
+    "position": "top",
     "reload_style_on_change": true,
     "modules-left": [
         "hyprland/workspaces",
@@ -125,7 +125,7 @@
     },
     "custom/lock": {
         "tooltip": false,
-        "on-click": "swaylock -i ~/Downloads/shaded_landscape.jpeg --grace 0",
+        "on-click": "hyprlock",
         "format": ""
     },
     "custom/power": {
