Add pyenv check, reset laptop sens

--- a/laptop/.config/hypr/hyprland.conf
+++ b/laptop/.config/hypr/hyprland.conf
@@ -1,7 +1,6 @@
 source=./macchiato.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
-monitor=DP-1,highres,1920x0,1
-monitor=DP-2,highres,0x0,1
+monitor=,highres,auto,1
 
 exec-once=waybar
 exec-once=hyprpaper
@@ -23,13 +22,13 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options =
+    kb_options = caps:swapescape
     kb_rules =
     follow_mouse = 1
     touchpad {
         natural_scroll = no
     }
-    sensitivity = -0.8 # -1.0 to 1.0, 0 means no modification.
+    sensitivity = 0 # -1.0 to 1.0, 0 means no modification.
 }
 
 general {
