Switch to Mocha, kwin window update

--- a/common/.tmux.conf
+++ b/common/.tmux.conf
@@ -37,7 +37,7 @@ set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions after computer reboot
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
 set -g @plugin 'catppuccin/tmux' # theme
-set -g @catppuccin_flavour 'macchiato'
+set -g @catppuccin_flavour 'mocha'
 
 set -g @catppuccin_window_left_separator ""
 set -g @catppuccin_window_right_separator " "
