--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -5,7 +5,7 @@ set -g base-index 1
 setw -g pane-base-index 1
 set -g renumber-windows on
 
-# Rebind prefix to Escape-space
+# Rebind prefix
 set-option -g prefix `
 unbind-key C-b
 bind-key ` send-prefix
@@ -16,7 +16,7 @@ unbind '"'
 bind - split-window -v
 
 unbind r
-bind r source-file ~/.tmux.conf
+bind r source-file ~/.tmux.conf \; display-message "Configuration reloaded"
 bind -r j resize-pane -D 5
 bind -r k resize-pane -U 5
 bind -r l resize-pane -R 5
@@ -36,32 +36,32 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions after computer reboot
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
-set -g @plugin 'catppuccin/tmux' # theme
-set -g @catppuccin_flavour 'mocha'
+set -g @plugin 'catppuccin/tmux'
 
-set -g @catppuccin_window_left_separator ""
-set -g @catppuccin_window_right_separator " "
-set -g @catppuccin_window_middle_separator " █"
-set -g @catppuccin_window_number_position "right"
+set -g @catppuccin_flavor 'mocha'
+set -g @catppuccin_window_status_style 'none'
+set -g @catppuccin_status_background 'none'
+set -g @catppuccin_pane_status_enabled 'off'
 
-set -g @catppuccin_window_default_fill "number"
-set -g @catppuccin_window_default_text "#W"
+set -g status-left-length 100
+set -g status-left ""
+set -ga status-left " #[fg=#{@thm_yellow}]#{session_name}  "
+set -g window-status-current-style "fg=#{@thm_peach}"
+set -g window-status-activity-style "fg=#{@thm_red}"
 
-set -g @catppuccin_window_current_fill "number"
-set -g @catppuccin_window_current_text "#W"
+set -g status-right-length 100
+set -g status-right ""
+set -ga status-right "#[fg=#{@thm_yellow}]#{?window_zoomed_flag, ZOOMED  ,}"
+set -ga status-right "#[fg=#{@thm_blue}]%H:%M"
 
-set -g @catppuccin_status_modules_right "directory session"
-set -g @catppuccin_status_left_separator  " "
-set -g @catppuccin_status_right_separator ""
-set -g @catppuccin_status_right_separator_inverse "no"
-set -g @catppuccin_status_fill "icon"
-set -g @catppuccin_status_connect_separator "no"
-
-set -g @catppuccin_directory_text "#{pane_current_path}"
+set -g pane-border-status top
+set -g pane-border-format ""
+set -g pane-active-border-style "bg=#{thm_bg},fg=#{@thm_overlay_0}"
+set -g pane-border-style "bg=#{thm_bg},fg=#{@thm_surface_0}"
+set -g pane-border-lines single
 
 set -g @resurrect-capture-pane-contents 'on'
 set -g @continuum-restore 'on'
 
 # Initialize TMUX plugin manager (keep this line at the very bottom of tmux.conf)
-set-environment -g PATH "/opt/homebrew/bin:/usr/local/bin:/bin:/usr/bin"
 run '~/.tmux/plugins/tpm/tpm'
