--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -30,6 +30,15 @@ set -g mode-keys vi
 set -g status-position top
 set -g focus-events on
 
+# search sessions
+unbind s
+bind s display-popup -E "\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    sed '/^$/d' |\
+    fzf --reverse --header='Jump to Session' |\
+    xargs tmux switch-client -t
+"
+
 # List of plugins
 set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
