--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -27,7 +27,6 @@ bind -r m resize-pane -Z
 set -g mouse on
 set -g mode-keys vi
 
-set -g status-position top
 set -g focus-events on
 
 # search sessions
@@ -52,6 +51,7 @@ set -g @catppuccin_window_status_style 'none'
 set -g @catppuccin_status_background 'none'
 set -g @catppuccin_pane_status_enabled 'off'
 
+set -g status-position bottom
 set -g status-left-length 100
 set -g status-left ""
 set -ga status-left " #[fg=#{@thm_yellow}]#{session_name}  "
@@ -63,7 +63,7 @@ set -g status-right ""
 set -ga status-right "#[fg=#{@thm_yellow}]#{?window_zoomed_flag, ZOOMED  ,}"
 set -ga status-right "#[fg=#{@thm_blue}]%H:%M"
 
-set -g pane-border-status top
+set -g pane-border-status bottom
 set -g pane-border-format ""
 set -g pane-active-border-style "bg=#{thm_bg},fg=#{@thm_overlay_0}"
 set -g pane-border-style "bg=#{thm_bg},fg=#{@thm_surface_0}"
