Add tmux status padding

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -63,7 +63,12 @@ set -g status-right ""
 set -ga status-right "#[fg=#{@thm_yellow}]#{?window_zoomed_flag, ZOOMED  ,}"
 set -ga status-right "#[fg=#{@thm_blue}]%H:%M"
 
-set -g pane-border-status bottom
+# Add empty status bar for padding
+set -Fg 'status-format[1]' '#{status-format[0]}'
+set -g 'status-format[0]' ''
+set -g status 2
+
+set -g pane-border-status off
 set -g pane-border-format ""
 set -g pane-active-border-style "bg=#{thm_bg},fg=#{@thm_overlay_0}"
 set -g pane-border-style "bg=#{thm_bg},fg=#{@thm_surface_0}"
