Telescope mapping fix, add telescope-fzf-native

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -64,9 +64,9 @@ set -ga status-right "#[fg=#{@thm_yellow}]#{?window_zoomed_flag, ZOOMED  ,}"
 set -ga status-right "#[fg=#{@thm_blue}]%H:%M"
 
 # Add empty status bar for padding
-set -Fg 'status-format[1]' '#{status-format[0]}'
-set -g 'status-format[0]' ''
-set -g status 2
+# set -Fg 'status-format[1]' '#{status-format[0]}'
+# set -g 'status-format[0]' ''
+# set -g status 2
 
 set -g pane-border-status off
 set -g pane-border-format ""
