--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,7 +32,7 @@ set -g focus-events on
 # search sessions
 unbind s
 bind s display-popup -E "\
-    tmux list-sessions -F '#{session_name}#{?session_attached, [],}' |\
+    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
     sed '/^$/d' |\
     fzf --reverse --header='Jump to Session' |\
     xargs tmux switch-client -t
