Sort tmux session switcher by most recent attach

--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -32,8 +32,10 @@ set -g focus-events on
 # search sessions
 unbind s
 bind s display-popup -E "\
-    tmux list-sessions -F '#{?session_attached,,#{session_name}}' |\
+    tmux list-sessions -F '#{?session_attached,,#{session_last_attached} #{session_name}}' |\
     sed '/^$/d' |\
+    sort -nr |\
+    cut -d' ' -f2- |\
     fzf --reverse --header='Jump to Session' |\
     xargs tmux switch-client -t
 "
