--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -63,7 +63,8 @@ set -g window-status-activity-style "fg=#{@thm_red}"
 set -g status-right-length 100
 set -g status-right ""
 set -ga status-right "#[fg=#{@thm_yellow}]#{?window_zoomed_flag, ZOOMED  ,}"
-set -ga status-right "#[fg=#{@thm_blue}]%H:%M"
+set -ga status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)"
+set -ga status-right " #[fg=#{@thm_blue}]%H:%M"
 
 # Add empty status bar for padding
 # set -Fg 'status-format[1]' '#{status-format[0]}'
