--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -46,30 +46,16 @@ set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions after computer reboot
 set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
-set -g @plugin 'catppuccin/tmux'
 
-set -g @catppuccin_flavor 'mocha'
-set -g @catppuccin_window_status_style 'none'
-set -g @catppuccin_status_background 'none'
-set -g @catppuccin_pane_status_enabled 'off'
-
-set -g status-position bottom
-set -g status-left-length 100
-set -g status-left ""
-set -ga status-left " #[fg=#{@thm_yellow}]#{session_name}  "
-set -g window-status-current-style "fg=#{@thm_peach}"
-set -g window-status-activity-style "fg=#{@thm_red}"
-
-set -g status-right-length 100
-set -g status-right ""
-set -ga status-right "#[fg=#{@thm_yellow}]#{?window_zoomed_flag, ZOOMED  ,}"
-set -ga status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)"
-set -ga status-right " #[fg=#{@thm_blue}]%H:%M"
-
-# Add empty status bar for padding
-# set -Fg 'status-format[1]' '#{status-format[0]}'
-# set -g 'status-format[0]' ''
-# set -g status 2
+set-option -g status-left-length 200
+set-option -g status-left " #{session_name}  "
+set-option -g status-style "bg=default"
+set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)"
+set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags} " 
+set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
+set-option -g window-status-current-style "fg=#e1a345" 
+set-option -g window-status-last-style "fg=#936a2e"
+set-option -g window-status-activity-style none
 
 set -g pane-border-status off
 set -g pane-border-format ""
