Gruvbox overhaul (mostly laptop)

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,4 +1,4 @@
-source=./macchiato.conf
+source=./gruvbox.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
 monitor=,highres,auto,1
 
@@ -33,11 +33,11 @@ input {
 
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 4
+    gaps_out = 4
     border_size = 2
-    col.active_border = $teal
-    col.inactive_border = $surface1
+    col.active_border = $green_light
+    col.inactive_border = $gray_neutral
     layout = dwindle
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
     allow_tearing = false
@@ -55,7 +55,7 @@ decoration {
         enabled = true
         range = 4
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = $dark_bg4
     }
 }
 
