--- a/wofi/.config/wofi/config
+++ b/wofi/.config/wofi/config
@@ -4,7 +4,7 @@ height=400
 show=drun
 always_parse_args=true
 show_all=false
-term=kitty
+term=ghostty
 hide_scroll=true
 print_command=true
 insensitive=true
