--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,133 +1,57 @@
 {
     "layer": "top",
     "position": "top",
-    "reload_style_on_change": true,
+    "height": 30,
+    "spacing": 4,
     "modules-left": [
-        "hyprland/workspaces",
-        "wlr/taskbar"
+        "hyprland/workspaces"
     ],
     "modules-center": [
         "clock"
     ],
     "modules-right": [
-        "privacy",
         "tray",
+        "pulseaudio",
+        "network",
         "cpu",
         "memory",
-        "network",
-        "pulseaudio",
-        "battery",
-        "custom/lock",
-        "custom/power"
+        "battery"
     ],
     "hyprland/workspaces": {
-        "disable-scroll": true,
-        "sort-by-name": true,
-        "format": " {icon} ",
+        "format": "{icon}",
         "format-icons": {
             "1": "󰈹",
-            "2": "󱃖",
+            "2": "",
+            "3": "",
+            "urgent": "",
+            "focused": "",
             "default": ""
+        },
+        "persistent_workspaces": {
+            "*": 3 // Show at least 3 workspaces
         }
     },
-    "sway/window": {
-        "max-length": 50
-    },
-    "hyprland/window": {
-        "icon": true,
-        "format": "{}",
-        "separate-outputs": true
-    },
-    "privacy": {
-        "icon-spacing": 4,
-        "icon-size": 18,
-        "transition-duration": 250,
-        "modules": [
-            {
-                "type": "screenshare",
-                "tooltip": true,
-                "tooltip-icon-size": 24
-            },
-            {
-                "type": "audio-out",
-                "tooltip": true,
-                "tooltip-icon-size": 24
-            },
-            {
-                "type": "audio-in",
-                "tooltip": true,
-                "tooltip-icon-size": 24
-            }
-        ]
-    },
-    "tray": {
-        "icon-size": 21,
-        "spacing": 10
-    },
-    "network": {
-        "format-wifi": "({signalStrength}%) ",
-        "format-ethernet": "{ipaddr} ",
-        "format-disconnected": "",
-        "max-length": 50,
-        "on-click": "nm-applet --indicator"
-    },
     "clock": {
-        "timezone": "America/Vancouver",
-        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>",
-        "format-alt": " {:%d/%m/%Y}",
-        "format": " {:%a %d %b  %I:%M %p}"
-    },
-    "memory": {
-        "format": "{: >3}%"
-    },
-    "cpu": {
-        "format": "{usage: >3}%"
+        "format": " {:%H:%M}",
+        "tooltip-format": "<big>{:%Y %B}</big>\n<tt><small>{calendar}</small></tt>"
     },
     "battery": {
         "states": {
+            "good": 85,
             "warning": 30,
             "critical": 15
         },
-        "interval": 30,
         "format": "{capacity}% {icon}",
-        "format-charging": "{capacity}% 󰂄",
-        "format-plugged": "",
+        "format-charging": "{capacity}% ",
+        "format-plugged": "{capacity}% ",
+        "format-alt": "{time} {icon}",
         "format-icons": [
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            "",
-            ""
-        ]
-    },
-    "pulseaudio": {
-        // "scroll-step": 1, // %, can be a float
-        "format": "{icon} {volume}%",
-        "format-muted": "",
-        "format-icons": {
-            "default": [
-                "",
-                "",
-                " "
-            ]
-        },
-        "on-click": "pavucontrol"
-    },
-    "custom/lock": {
-        "tooltip": false,
-        "on-click": "hyprlock",
-        "format": ""
-    },
-    "custom/power": {
-        "tooltip": false,
-        "on-click": "wlogout &",
-        "format": "⏻"
+            "",
+            "",
+            "",
+            "",
+            ""
+        ],
+        "tooltip-format": "{timeTo} - {power}W"
     }
 }
