Hyprland Desktop update

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -1,6 +1,24 @@
 source=./gruvbox.conf
 # See https://wiki.hyprland.org/Configuring/Monitors/
+# Auto configuration for any monitor (laptop compatibility)
 monitor=,highres,auto,1
+
+# Desktop dual-monitor setup (will only apply if monitors are detected)
+# Primary monitor (ASUS ROG XG27AQ) - center/right position
+monitor=DP-1,2560x1440@170,0x0,1
+# Secondary monitor (ASUS VG248) - left position
+monitor=DP-2,1920x1080@144,-1920x0,1
+
+# Workspace rules for dual-monitor setup
+workspace=1,monitor:DP-1,default:true
+workspace=2,monitor:DP-1
+workspace=3,monitor:DP-1
+workspace=4,monitor:DP-1
+workspace=5,monitor:DP-1
+workspace=6,monitor:DP-2,default:true
+workspace=7,monitor:DP-2
+workspace=8,monitor:DP-2
+workspace=9,monitor:DP-2
 
 exec-once=waybar
 exec-once=hyprpaper
@@ -9,7 +27,7 @@ exec-once=blueman-applet
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
 
-$terminal = kitty
+$terminal = ghostty
 $fileManager = thunar
 $menu = wofi --show drun
 
@@ -22,7 +40,7 @@ input {
     kb_layout = us
     kb_variant =
     kb_model =
-    kb_options = caps:swapescape
+    kb_options =
     kb_rules =
     follow_mouse = 1
     touchpad {
@@ -36,7 +54,7 @@ general {
     gaps_in = 4
     gaps_out = 4
     border_size = 2
-    col.active_border = $green_light
+    col.active_border = $aqua_dark
     col.inactive_border = $gray_neutral
     layout = dwindle
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
@@ -60,7 +78,7 @@ decoration {
 }
 
 animations {
-    enabled = yes
+    enabled = no
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
     animation = windows, 1, 7, myBezier
@@ -99,6 +117,12 @@ device {
     sensitivity = -0.5
 }
 
+# Desktop mouse (Logitech Superlight) - lower sensitivity
+device {
+    name = logitech-usb-receiver
+    sensitivity = -0.8
+}
+
 # Example windowrule v1
 # windowrule = float, ^(kitty)$
 # Example windowrule v2
@@ -106,13 +130,17 @@ device {
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
 windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 
+# App-specific workspace assignments
+windowrulev2 = workspace 6, class:^(discord)$
+windowrulev2 = workspace 6, class:^(Discord)$
+windowrulev2 = workspace 3, class:^(DBeaver)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
 bind = $mainMod, Q, exec, $terminal
-bind = $mainMod SHIFT, C, killactive, 
+bind = $mainMod, W, killactive, 
 bind = $mainMod, M, exit, 
 bind = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
