Update hyprland to work on desktop as well

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -20,16 +20,22 @@ workspace=7,monitor:DP-2
 workspace=8,monitor:DP-2
 workspace=9,monitor:DP-2
 
+$terminal = ghostty
+$fileManager = nautilus
+$menu = wofi --show drun
+
 exec-once=waybar
 exec-once=hyprpaper
 exec-once=nm-applet --indicator
+
+# Conditional caps/escape swap for laptop only
+exec-once=[[ $(hostnamectl hostname) == "MADVILLAIN" ]] && hyprctl keyword input:kb_options caps:escape
 exec-once=blueman-applet
 exec-once=/usr/lib/polkit-gnome/polkit-gnome-authentication-agent-1
 exec-once=dbus-update-activation-environment --systemd WAYLAND_DISPLAY XDG_CURRENT_DESKTOP
-
-$terminal = ghostty
-$fileManager = thunar
-$menu = wofi --show drun
+exec-once = [workspace 1 silent] firefox
+exec-once = [workspace 2 silent] $terminal
+exec-once = [workspace 6 silent] discord
 
 # Some default env vars.
 env = XCURSOR_SIZE,24
@@ -54,7 +60,7 @@ general {
     gaps_in = 4
     gaps_out = 4
     border_size = 2
-    col.active_border = $aqua_dark
+    col.active_border = $gray_bright
     col.inactive_border = $gray_neutral
     layout = dwindle
     # Please see https://wiki.hyprland.org/Configuring/Tearing/ before you turn this on
@@ -134,21 +140,22 @@ windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
 windowrulev2 = workspace 6, class:^(discord)$
 windowrulev2 = workspace 6, class:^(Discord)$
 windowrulev2 = workspace 3, class:^(DBeaver)$
+windowrulev2 = workspace 5, class:^(Spotify)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
 
 # Example binds, see https://wiki.hyprland.org/Configuring/Binds/ for more
-bind = $mainMod, Q, exec, $terminal
+bindl = $mainMod, Q, exec, $terminal
 bind = $mainMod, W, killactive, 
 bind = $mainMod, M, exit, 
-bind = $mainMod, E, exec, $fileManager
+bindl = $mainMod, E, exec, $fileManager
 bind = $mainMod, V, togglefloating, 
-bind = $mainMod, D, exec, $menu
-bind = $mainMod, P, exec, grim -g "$(slurp -o)" ~/Screenshots/$(date +'%s_grim.png')
-bind = $mainMod SHIFT, P, exec, grim ~/Screenshots/$(date +'%s_grim.png')
+bindl = $mainMod, D, exec, $menu
+bindl = $mainMod, P, exec, grim -g "$(slurp -o)" ~/Screenshots/$(date +'%s_grim.png')
+bindl = $mainMod SHIFT, P, exec, grim ~/Screenshots/$(date +'%s_grim.png')
 bind = $mainMod, F, fullscreen,1
-bind = $mainMod, C, exec, Chatterino-x86_64-Qt6.AppImage
+bindl = $mainMod, C, exec, chatterino
 bind = $mainMod SHIFT, F, fullscreen,
 
 # Move focus with mainMod + arrow keys
