--- a/waybar/.config/waybar/config.jsonc
+++ b/waybar/.config/waybar/config.jsonc
@@ -1,7 +1,7 @@
 {
   "layer": "top",
   "position": "top",
-  "height": 30,
+  "height": 35,
   "spacing": 4,
   "modules-left": [
     "hyprland/workspaces"
@@ -23,7 +23,9 @@
     "format-icons": {
       "1": "󰈹",
       "2": "",
-      "3": "",
+      "3": "",
+      "5": "",
+      "6": "",
       "urgent": "",
       "focused": "",
       "default": ""
@@ -38,7 +40,11 @@
   },
   "backlight": {
     "format": "{icon} {percent}%",
-    "format-icons": ["󰃞", "󰃟", "󰃠"]
+    "format-icons": [
+      "󰃞",
+      "󰃟",
+      "󰃠"
+    ]
   },
   "pulseaudio": {
     "format": "{icon} {volume}%",
@@ -54,7 +60,11 @@
       "phone": "󰄜",
       "portable": "󰦧",
       "car": "󰄋",
-      "default": ["󰕿", "󰖀", "󰕾"]
+      "default": [
+        "󰕿",
+        "󰖀",
+        "󰕾"
+      ]
     },
     "on-click": "pavucontrol"
   },
