--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -20,9 +20,14 @@ workspace=7,monitor:DP-2
 workspace=8,monitor:DP-2
 workspace=9,monitor:DP-2
 
+# No gaps when single window open
+workspace = w[t1], gapsout:0
+workspace = w[t1], border:0
+
 $terminal = ghostty
 $fileManager = nautilus
 $menu = wofi --show drun
+$browser = firefox
 
 exec-once=waybar
 exec-once=hyprpaper
@@ -154,9 +159,9 @@ bind = $mainMod, V, togglefloating,
 bindl = $mainMod, D, exec, $menu
 bindl = $mainMod, P, exec, grim -g "$(slurp -o)" ~/Screenshots/$(date +'%s_grim.png')
 bindl = $mainMod SHIFT, P, exec, grim ~/Screenshots/$(date +'%s_grim.png')
-bind = $mainMod, F, fullscreen,1
 bindl = $mainMod, C, exec, chatterino
-bind = $mainMod SHIFT, F, fullscreen,
+bindl = $mainMod, F, fullscreen,
+bindl = $mainMod, T, exec, $terminal -e btop
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, H, movefocus, l
