--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -50,11 +50,11 @@ set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions ever
 set-option -g status-left-length 200
 set-option -g status-left " #{session_name}  "
 set-option -g status-style "bg=default"
+set-option -g status-justify centre
 set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)"
-set-option -g window-status-format "#{window_index}:#{window_name}#{window_flags} " 
-set-option -g window-status-current-format "#{window_index}:#{window_name}#{window_flags} "
+set-option -g window-status-format "#{window_index}:#{window_name} " 
+set-option -g window-status-current-format "#{window_index}:#{window_name} "
 set-option -g window-status-current-style "fg=#e1a345" 
-set-option -g window-status-last-style "fg=#936a2e"
 set-option -g window-status-activity-style none
 
 set -g pane-border-status off
