--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -46,6 +46,12 @@ exec-once = [workspace 6 silent] discord
 env = XCURSOR_SIZE,24
 env = QT_QPA_PLATFORMTHEME,qt5ct # change to qt6ct if you have that
 
+# NVIDIA-specific environment variables
+env = LIBVA_DRIVER_NAME,nvidia
+env = XDG_SESSION_TYPE,wayland
+env = GBM_BACKEND,nvidia-drm
+env = __GLX_VENDOR_LIBRARY_NAME,nvidia
+
 # For all categories, see https://wiki.hyprland.org/Configuring/Variables/
 input {
     kb_layout = us
@@ -111,11 +117,6 @@ master {
     new_on_active = true
 }
 
-gestures {
-    # See https://wiki.hyprland.org/Configuring/Variables/ for more
-    workspace_swipe = off
-}
-
 misc {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
     force_default_wallpaper = 0 # Set to 0 or 1 to disable the anime mascot wallpapers
@@ -159,6 +160,7 @@ bind = $mainMod, V, togglefloating,
 bindl = $mainMod, D, exec, $menu
 bindl = $mainMod, P, exec, grim -g "$(slurp -o)" ~/Screenshots/$(date +'%s_grim.png')
 bindl = $mainMod SHIFT, P, exec, grim ~/Screenshots/$(date +'%s_grim.png')
+bindl = $mainMod SHIFT, V, exec, wf-recorder -g "$(slurp)" -f ~/Videos/$(date +'%Y-%m-%d-%H%M%S').mp4
 bindl = $mainMod, C, exec, chatterino
 bindl = $mainMod, F, fullscreen,
 bindl = $mainMod, T, exec, $terminal -e btop
