--- a/tmux/.tmux.conf
+++ b/tmux/.tmux.conf
@@ -45,10 +45,10 @@ set -g @plugin 'tmux-plugins/tpm'
 set -g @plugin 'tmux-plugins/tmux-sensible'
 set -g @plugin 'christoomey/vim-tmux-navigator'
 set -g @plugin 'tmux-plugins/tmux-resurrect' # persist sessions after computer reboot
-set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
+# set -g @plugin 'tmux-plugins/tmux-continuum' # automatically saves sessions every 15 minutes
 
 set-option -g status-left-length 200
-set-option -g status-left " #{session_name}  "
+set-option -g status-left "#{?window_zoomed_flag,#[fg=red]Z,} #{session_name}  "
 set-option -g status-style "bg=default"
 set-option -g status-justify centre
 set -g status-right "#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)"
