Fix Hyprland window rules

--- a/hypr/.config/hypr/hyprland.conf
+++ b/hypr/.config/hypr/hyprland.conf
@@ -140,13 +140,12 @@ device {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = suppressevent maximize, class:.* # You'll probably like this.
+windowrule = match:class .*, suppress_event maximize # You'll probably like this.
 
 # App-specific workspace assignments
-windowrulev2 = workspace 6, class:^(discord)$
-windowrulev2 = workspace 6, class:^(Discord)$
-windowrulev2 = workspace 3, class:^(DBeaver)$
-windowrulev2 = workspace 5, class:^(Spotify)$
+windowrule = match:class ^(discord)$, workspace 6
+windowrule = match:class ^(Discord)$, workspace 6
+windowrule = match:class ^(DBeaver)$, workspace 3
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
